# BaseDeConhecimento

./: .env  db.sqlite3  manage.py  pyproject.toml  requirements.txt
BaseConhecimento/: asgi.py  settings.py  urls.py  wsgi.py
apps/conhecimento/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/conhecimento/migrations/: 0001_initial.py
apps/conhecimento/templates/: artigos.html  create_meumodelo.html  delete_meumodelo_confirm.html  edit_meumodelo.html  edit_texto.html  index.html  ver_artigos.html  view_meumodelo.html
apps/conhecimento/templates/partials/: artigos_cards.html
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/: login.html
apps/voice_assistant/: llm.py  urls.py  views.py
apps/voice_assistant/templates/: index_chat.html  index_play_voice.html  index_voice.html
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
static/js/: ckeditor_init.js
templates/: base.html  footer.html  menu.html
