[tool.poetry]
name = "basedeconhecimento"
version = "0.1.0"
description = ""
authors = ["venysssssssssss <shablaur7@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "5.1.1"
djangorestframework = "3.12.4"
psycopg2-binary = "2.9.1"
django-cors-headers = "3.7.0"
asgiref = "3.8.1"
django-ckeditor = "6.7.1"
django-ckeditor-5 = "0.2.13"
django-crispy-forms = "2.3"
django-js-asset = "2.2.0"
django-role-permissions = "3.2.0"
pillow = "10.4.0"
sqlparse = "0.5.1"
tzdata = "2024.1"
blue = "^0.9.1"
isort = "^5.13.2"
crispy-bootstrap5 = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
